align profile divs and fix styling issues

--- a/client/src/components/User/User.css
+++ b/client/src/components/User/User.css
@@ -56,26 +56,33 @@ button.nav-link:hover {
 
 .profile-div{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1750px;
+}
+
+.profile-information-div, .profile-reviews-div {
+    display: flex;
     flex-direction: row;
-    margin-left: 350px;
 }
 
 .menu-description{
     margin-top:50px;
     display: flex;
     flex-direction: column;
-    /* background-color:#161616; */
-    width: 15%;
+    align-items: flex-start;
+    width: 200px;
 }
 
 .menu-description p {
     margin-top: -10px;
 }
 
-#edit-user-form {
+#edit-user-form, .profile-reviews-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
+    width: 450px;
 }
 
 .profile-container{
@@ -85,44 +92,33 @@ button.nav-link:hover {
     background-color:#161616;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-left: 400px;
+    align-items: flex-start;
+    padding: 20px;
 }
 
 .input-group {
     display: flex;
-    align-items: left;
     flex-direction: column;
     margin-bottom: 15px;
     width: 99%;
-    margin-left: 30px;
-    margin-top: 5px;
 }
 
 .input-group label{
     width: 100%; 
     display: flex;
     flex-direction: column;
-    align-items: left;
     margin-bottom: 5px;
     text-align: left;
-    margin-left: 5px;
 }
 
 .input-group input {
-    width: 90%;
-    margin-left: 5px;
-    margin-top: 3px;
+    width: 100%;
     border: 2px solid #ffffff;
     border-radius: 3px;
     height: 23px;
 }
 
 #save-changes-button{
-    /* display: flex;
-    flex-direction: column;
-    align-items: right; */
-    /* margin-right: -100px; */
     width: 80px;
     color: #ffffff;
     background-color: #006674;
@@ -140,15 +136,12 @@ button.nav-link:hover {
 }
 
 #save-changes-button:disabled {
-    
     background-color: #b3c7dc;
     cursor: not-allowed;
 }
 
-#first-group {
-    margin-top: 30px;
-}
-
-#last-group{
-    margin-bottom: 30px;
+.profile-review{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
